syntax = "proto3";

package users;

service Users {
    // rpc getUsers(GetUsersRequest) returns (Users) {}
    rpc getUserById(GetUserRequest) returns (User) {}
    rpc saveUser(SaveUserRequest) returns (User) {}
}

message GetUserRequest {
    int32 userId = 1;
}

message SaveUserRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
}

message User {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
}

